test/elaboration/bad/coreml_typeconstraint.mle
let (id : unit -> unit) = fun (x : unit) -> (x[] : int)